<resources>
    <string name="app_name">SDSU Chat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="SignUp_Link">No account yet? Create one</string>
    <string name="new_record">New Record</string>
    <string name="view_details">View Records</string>
    <string name="nick_name">Nick Name</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="latitude">Latitude</string>
    <string name="email">Email</string>
    <string name="longitude">Longitude</string>
    <string name="year">Year</string>
    <string name="city">City</string>
    <string name="set">SET</string>
    <string name="done">Done</string>
    <string name="load_more">Load More</string>
    <string name="cancel">Cancel</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="filter">Filter</string>
    <string name="map_view">Map View</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="list_view">List View</string>
    <string name="chat">Chat</string>
    <string name="Register">Register</string>
    <string name="login_error_title">Checking</string>
    <string name="clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="coordinates">GPS Coordinates</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_nickname">Enter Nickname</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_country">Set Country</string>
    <string name="hint_state">Set State</string>
    <string name="hint_year">Enter Year</string>
    <string name="hint_city">Enter City</string>
    <string name="maps_view">Map View</string>
    <string name="location">Enter Location</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="map_link">Click for Map</string>
    <string name="Loading">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_setter">Map</string>
</resources>
