<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/modegroup"
        android:checkableBehavior="single">
    <item
        android:id="@+id/menu_mapView"
        android:title="@string/map_view"
        android:checked="true"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_listView"
        android:title="@string/list_view"
        android:checked="true"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_chat"
        android:title="@string/chat"
        android:checked="true"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:checked="true"
        app:showAsAction="ifRoom|withText"/>
    </group>

</menu>