<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sreer.sdsuchat.FilterFragment">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_filter_country" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/spinner_country" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_filter_State" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/spinner_state" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_filter_year" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/spinner_year" />
        </TableRow>

        <TableRow>

            <Button
                android:text="@string/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_filter_clear" />

            <Button
                android:text="@string/apply_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_filter_done" />


        </TableRow>
    </TableLayout>

</FrameLayout>
