<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="180dp"
    android:paddingRight="180dp"
    android:paddingTop="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/EditText_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/nick_name"
            android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/EditText_signUpemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <EditText
            android:id="@+id/EditText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/Spinner_country"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000" />


            <Spinner
                android:id="@+id/Spinner_state"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:textColor="#000000" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/EditText_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/city"
            android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/Spinner_year"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_year"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/TextView_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/coordinates" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/EditText_latitude"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/hint_latitude"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/EditText_longitude"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/TextView_coordinates"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hint_longitude"
                android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/TextView_gps_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/map_link" />


        </LinearLayout>

        <Button
            android:id="@+id/Button_submit"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/Register" />

    </LinearLayout>
</LinearLayout>
    </ScrollView>
