<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:paddingTop="7dp"
    android:paddingBottom="7dp"
    android:orientation="vertical" >

    <fragment
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.sreer.datacenter.SetterMapActivity"
        map:cameraBearing="112.5"
        map:cameraTargetLat="32.772399"
        map:cameraTargetLng="-117.072286"
        map:cameraTilt="30"
        map:cameraZoom="15"
        map:uiCompass="true"
        map:uiRotateGestures="true"
        map:uiScrollGestures="true"
        map:uiTiltGestures="true"
        map:uiZoomControls="true"
        map:uiZoomGestures="true"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/EditText_map_location"
            android:hint="@string/location"
            android:layout_gravity="bottom"/>


        <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_map_ok" />


    </LinearLayout>

    <Button
        android:text="@string/set"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_map_set"
        android:layout_gravity="bottom|center_horizontal"/>

</FrameLayout>
